<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spectrogrammer</string>
    <string name="settings">Settings</string>
    <string name="green_string">green</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="volume">Volume</string>
    <string name="fft_overlap">FFT overlap</string>
    <string name="bars_decay">Bars decay</string>
    <string name="fft_size">FFT size</string>
    <string name="set_average_count">Set average count</string>
    <string name="x_axis_scale_type">X axis :</string>
    <string name="y_axis_scale_type">Y axis :</string>
    <string name="logarithmic">logarithmic</string>
    <string name="frequency_logarithmic_axis">FrequencyLogarithmicAxis</string>
    <string name="ScaleLogarithmic">ScaleLogarithmic</string>
    <string name="horizontalScaleSelected">Horizontal Scale Selected</string>
    <string name="verticalScaleSelected">Vertical Scale Selected</string>
    <string name="showDebugInfo">Show Debug Info</string>
    <string name="play">play</string>
    <string name="ruler">ruler</string>
    <string name="exit">exit</string>
    <string name="show_debug_data">show debug data</string>
    <string name="show_time_scale">show time scale</string>
    <string name="pause_when_waterfall_reaches_the_bottom">Pause when waterfall reaches the bottom</string>
    <string name="time_scale_type">Time scale :</string>
    <string-array name="processors_array">
        <item>FFT</item>
        <item>Music</item>
    </string-array>

</resources>

