<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#cc808080"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/font_size">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="This is a PopupWindow" />

    <TextView
        android:id="@+id/textVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volume" />

    <SeekBar
        android:id="@+id/volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

    <TextView
        android:id="@+id/textOverlap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fft_overlap" />

    <SeekBar
        android:id="@+id/fft_overlap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bars_decay" />

    <SeekBar
        android:id="@+id/bars_decay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_average_count" />

    <SeekBar
        android:id="@+id/average_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:min="1"
        android:max="100" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fft_size" />

    <SeekBar
        android:id="@+id/fft_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="5" />

    <LinearLayout
        android:id="@+id/FFT_stuff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation='vertical'>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation='horizontal'>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="@string/x_axis_scale_type" />

                <Spinner
                    android:id="@+id/x_axis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />


                <TextView
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/y_axis_scale_type" />

                <Spinner
                    android:id="@+id/y_axis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/debug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="show debug data" />


</LinearLayout>